--- a/GUI/main_window_design.ui
+++ b/GUI/main_window_design.ui
@@ -37,7 +37,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QRadioButton" name="radioButton">
+       <widget class="QRadioButton" name="radioButtonHist">
         <property name="text">
          <string>Histogram Equalization</string>
         </property>
@@ -50,7 +50,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_3">
+       <widget class="QRadioButton" name="radioButtonContrast">
         <property name="text">
          <string>Contrast Stretching</string>
         </property>
@@ -60,7 +60,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_4">
+       <widget class="QRadioButton" name="radioButtonLog">
         <property name="text">
          <string>Log Compression</string>
         </property>
@@ -70,7 +70,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_2">
+       <widget class="QRadioButton" name="radioButtonReverse">
         <property name="text">
          <string>Reverse Video</string>
         </property>
@@ -80,7 +80,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_5">
+       <widget class="QRadioButton" name="radioButtonMedian">
         <property name="text">
          <string>Median Filter</string>
         </property>
@@ -91,7 +91,7 @@
       </item>
      </layout>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="pushButtonApply">
      <property name="geometry">
       <rect>
        <x>200</x>
@@ -105,7 +105,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QToolButton" name="toolButton">
+   <widget class="QToolButton" name="toolButtonLoad">
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -118,7 +118,7 @@
      <string>...</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="lineEditLoad">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -140,7 +140,7 @@
     <property name="title">
      <string>Show Images</string>
     </property>
-    <widget class="QCommandLinkButton" name="commandLinkButton">
+    <widget class="QCommandLinkButton" name="commandLinkButtonViewer">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -177,21 +177,21 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <widget class="QRadioButton" name="radioButton_12">
+       <widget class="QRadioButton" name="radioButtonJPEG">
         <property name="text">
          <string>JPEG</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_13">
+       <widget class="QRadioButton" name="radioButtonPNG">
         <property name="text">
          <string>PNG</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_11">
+       <widget class="QRadioButton" name="radioButtonTIFF">
         <property name="text">
          <string>TIFF</string>
         </property>
@@ -199,7 +199,7 @@
       </item>
      </layout>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="pushButtonDonwload">
      <property name="geometry">
       <rect>
        <x>160</x>
