--- a/GUI/main_window_design.ui
+++ b/GUI/main_window_design.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>602</width>
-    <height>306</height>
+    <height>347</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>60</y>
+      <y>100</y>
       <width>301</width>
       <height>201</height>
      </rect>
@@ -82,7 +82,7 @@
       <item>
        <widget class="QRadioButton" name="radioButtonMedian">
         <property name="text">
-         <string>Median Filter</string>
+         <string>Gamma Correction</string>
         </property>
         <attribute name="buttonGroup">
          <string notr="true">buttonGroup</string>
@@ -109,7 +109,7 @@
     <property name="geometry">
      <rect>
       <x>470</x>
-      <y>20</y>
+      <y>60</y>
       <width>25</width>
       <height>19</height>
      </rect>
@@ -122,7 +122,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>20</y>
+      <y>60</y>
       <width>331</width>
       <height>20</height>
      </rect>
@@ -132,7 +132,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>60</y>
+      <y>100</y>
       <width>241</width>
       <height>80</height>
      </rect>
@@ -158,7 +158,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>150</y>
+      <y>190</y>
       <width>251</width>
       <height>111</height>
      </rect>
@@ -217,13 +217,49 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>20</y>
+      <y>60</y>
       <width>71</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>Input images</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEditEmail">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>20</y>
+      <width>331</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>20</y>
+      <width>71</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Email address</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonEmail">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>20</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Validate Email</string>
     </property>
    </widget>
   </widget>
