Changed median filtration to gamma correction

--- a/GUI/main_window_design.ui
+++ b/GUI/main_window_design.ui
@@ -80,7 +80,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButtonMedian">
+       <widget class="QRadioButton" name="radioButtonGamma">
         <property name="text">
          <string>Gamma Correction</string>
         </property>
